Still in progress! Need some updates from new_JSON.
Uploading what I have now.

--- a/setup.ini
+++ b/setup.ini
@@ -2,10 +2,10 @@
 # All instruments connected to the setup must be configured here
 
 # this section sets up interactions with the lab server
-[labserver]
-address=qdash-server.phas.ubc.ca
+[server]
+server_url=qdash-server.phas.ubc.ca
 ftp_port=9999
-push_data=0
+srv_push=0
 
 [instrument]
 name=babyDAC
