--- a/setup.ini
+++ b/setup.ini
@@ -2,37 +2,40 @@
 # All instruments connected to the setup must be configured here
 
 # this section sets up interactions with the lab server
-[server]
+[scancontroller]
 server_url=qdash-server.phas.ubc.ca
 ftp_port=9999
 srv_push=0
+filetype=hdf5
 
-[instrument]
+# all serial communication specific constants should be set in "init_function"
+[serial-instrument]
 name=babyDAC
 instrID=bd4
 visa_address=ASRL4::INSTR
-baud_rate=9600
 init_function=InitBabyDACs("2,4", "55,55")
 
-[instrument]
+[gpib-instrument]
 name=SRS
 instrID=srs1
 visa_address=GPIB0::1::INSTR
 test_query=*IDN?
 
-[instrument]
+[gpib-instrument]
 name=k2400
 instrID=k2400
 visa_address=GPIB0::2::INSTR
 test_query=*IDN?
 
 # Lakeshore resistance bridge
-[instrument]
+[http-instrument]
 name=LS370
-instrID=12345
+instrID=ls370
+token=12345
+init_function=initLS370()
 
 # Lakeshore magnet power supply
-[instrument]
+[serial-instrument]
 name=LS625
 instrID=ls625x
 visa_address=ASRL1::INSTR
