Adding more stuff!
- BabyDAC: small changes
- LS370:
    - instrID is now the RPi url
    - moved communication functions to scancontroller_INSTR
- LS625: small changes
- ScanCpntroller_INI: adding support for visa attriutes
- ScanController_INSTR: moved HTTP communication functions here from
LS370 driver
- setup.ini : small changes

--- a/setup.ini
+++ b/setup.ini
@@ -8,38 +8,45 @@ ftp_port=9999
 srv_push=0
 filetype=hdf5
 
-# all serial communication specific constants should be set in "init_function"
-[serial-instrument]
+[visa-instrument]
 name=babyDAC
 instrID=bd4
 visa_address=ASRL4::INSTR
-init_function=InitBabyDACs("2,4", "55,55")
+baudrate=57600
+stopbits=10
+databits=8
+parity=0
 
-[gpib-instrument]
+[visa-instrument]
 name=SRS
 instrID=srs1
 visa_address=GPIB0::1::INSTR
 test_query=*IDN?
 
-[gpib-instrument]
+[visa-instrument]
 name=k2400
 instrID=k2400
 visa_address=GPIB0::2::INSTR
 test_query=*IDN?
 
 # Lakeshore resistance bridge
+# igh: http://qdash.qdot.lab:7777/api/v1/, bfsmall: http://bfsmall-wifi:7777/api/v1/
 [http-instrument]
 name=LS370
 instrID=ls370
-token=12345
-init_function=initLS370()
+url=http://bfsmall-wifi:7777/api/v1/
 
 # Lakeshore magnet power supply
-[serial-instrument]
+[visa-instrument]
 name=LS625
 instrID=ls625x
 visa_address=ASRL1::INSTR
-baud_rate=57600
-stop_bits=10
-data_bits=7
+baudrate=57600
+stopbits=10
+databits=7
 parity=1
+
+[gui]
+babyDAC=initBabyDACs("2,4", "55,55")
+LS625=initLS625TwoAxis(ls625x,ls625z)
+LS370=initLS370(ls370)
