INI config done!
- ScanController:
    - small changes to Initscancontroller
- ScanController_INI: deleted
- ScanController_INSTR:
    - small changes
- ScanController_IO:
    - added the INI functions
- setup.ini
    - small changes

--- a/setup.ini
+++ b/setup.ini
@@ -4,9 +4,12 @@
 # this section sets up interactions with the lab server
 [scancontroller]
 server_url=qdash-server.phas.ubc.ca
-ftp_port=9999
 srv_push=0
 filetype=hdf5
+sftp_port=1234
+sftp_user=somename
+slack_url=https://hooks.slack.com/services/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
+colormap="VioletOrangeYellow"
 
 [visa-instrument]
 name=babyDAC
