--- a/setup.ini
+++ b/setup.ini
@@ -1,15 +1,15 @@
-# Configuration file for Igor Acq code
+# Configuration file for IgorAcq code
 # All instruments connected to the setup must be configured here
 
 # this section sets up interactions with the lab server
 [scancontroller]
 server_url=qdash-server.phas.ubc.ca
-srv_push=0
+srv_push=1
 filetype=hdf5
-sftp_port=1234
-sftp_user=somename
+sftp_port=7743
+sftp_user=igor-data
 slack_url=https://hooks.slack.com/services/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
-colormap="VioletOrangeYellow"
+colormap=VioletOrangeYellow
 
 [visa-instrument]
 name=babyDAC
@@ -32,13 +32,6 @@ instrID=k2400
 visa_address=GPIB0::2::INSTR
 test_query=*IDN?
 
-# Lakeshore resistance bridge
-# igh: http://qdash.qdot.lab:7777/api/v1/, bfsmall: http://bfsmall-wifi:7777/api/v1/
-[http-instrument]
-name=LS370
-instrID=ls370
-url=http://bfsmall-wifi:7777/api/v1/
-
 # Lakeshore magnet power supply
 [visa-instrument]
 name=LS625
@@ -49,7 +42,17 @@ stopbits=10
 databits=7
 parity=1
 
+# Lakeshore resistance bridge
+# igh: http://qdash.qdot.lab:7777/api/v1/
+# bfsmall: http://bfsmall-wifi:7777/api/v1/
+[http-instrument]
+name=LS370
+instrID=ls370
+url=http://bfsmall-wifi:7777/api/v1/
+
+# run scripts to load GUI(s)
+# values must be functions already loaded into IGOR experiment
 [gui]
-babyDAC=initBabyDACs("2,4", "55,55")
-LS625=initLS625TwoAxis(ls625x,ls625z)
-LS370=initLS370(ls370)
+babyDAC=initBabyDACs(bd4, "2,4", "55,55")
+# LS625=initLS625TwoAxis(ls625x,ls625z)
+# LS370=initLS370(ls370)
