fix a few problems

--- a/setup.ini
+++ b/setup.ini
@@ -3,7 +3,8 @@
 
 # this section sets up interactions with the lab server
 [scancontroller]
-server_url=qdash-server.phas.ubc.ca
+srv_url=qdash-server.phas.ubc.ca
+srv_dir=/measurement-data
 srv_push=1
 filetype=hdf5
 sftp_port=7743
