--- a/setup.ini
+++ b/setup.ini
@@ -2,6 +2,8 @@
 # All instruments connected to the setup must be configured here
 
 # this section sets up interactions with the lab server
+# srv_dir should be an absolute path on the server with no ending /
+#     unless you know better, it should be /measurement-data
 [scancontroller]
 srv_url=qdash-server.phas.ubc.ca
 srv_dir=/measurement-data
